user-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: admin-api
    - protocol: TCP
      port: 3001
      targetPort: 3001
      name: user-api
    - protocol: TCP
      port: 3002
      targetPort: 3002
      name: internal
  type: ClusterIP
